Recuperando datos, listando, paginando

--- a/Views/Curso/Index.cshtml
+++ b/Views/Curso/Index.cshtml
@@ -3,5 +3,13 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Controler Curso</h2>
+<h2>Curso</h2>
 
+<div id="tCurso">
+
+</div>
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<link href="~/Content/datatables.css" rel="stylesheet" />
+<script src="~/Scripts/datatables.js"></script>
+<script src="~/Scripts/js/Curso.js"></script>
