--- a/Views/Periodo/Index.cshtml
+++ b/Views/Periodo/Index.cshtml
@@ -5,3 +5,13 @@
 
 <h2>Periodo</h2>
 
+
+
+<div id="tPeriodo">
+
+</div>
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<link href="~/Content/datatables.css" rel="stylesheet" />
+<script src="~/Scripts/datatables.js"></script>
+<script src="~/Scripts/js/Periodo.js"></script>
