Filtros por Boton y Sensitivo y limpieza de busqueda

--- a/Views/Curso/Index.cshtml
+++ b/Views/Curso/Index.cshtml
@@ -4,8 +4,13 @@
 }
 
 <h2>Curso</h2>
+<label>Ingrese Nombre:</label>
+<input type="text" id="txtFindNombre" />
+<input type="button" id="btnBuscar" value="Buscar" class="btn btn-success" />
+<input type="button" id="btnLimpiar" value="Limpiar" class="btn btn-primary" />
 
 <div id="tCurso">
+
 
 </div>
 
