--- a/Views/Periodo/Index.cshtml
+++ b/Views/Periodo/Index.cshtml
@@ -6,7 +6,9 @@
 <h2>Periodo</h2>
 
 
-
+<label>Ingrese Nombre:</label>
+<input type="text" id="txtFindNombre" />
+<input type="button" id="btnLimpiar" value="Limpiar" class="btn btn-primary" />
 <div id="tPeriodo">
 
 </div>
