Metodos auxiliares y filtrado por Sexo en Alumno

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,11 +23,13 @@
                     <li>@Html.ActionLink("Curso", "Index", "Curso", new { area = "" }, new { @class = "navbar-brand" })</li>
                     <li>@Html.ActionLink("Periodo", "Index", "Periodo", new { area = "" }, new { @class = "navbar-brand" })</li>
                     <li>@Html.ActionLink("Seccion", "Inicio", "Seccion", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Alumno", "Index", "Alumno", new { area = "" }, new { @class = "navbar-brand" })</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container body-content">
+        <div style="margin-top:60px;"></div>
         @RenderBody()
         <hr />
         <footer>
